Added Destination for Germany and Peru

--- a/css/app.css
+++ b/css/app.css
@@ -54,7 +54,12 @@ h2 {
 #belize {
     background-color: #4dd0e1;
 }
-
+#germany{
+    background-color: coral;
+}
+#peru{
+    background-color: darkkhaki;
+}
 #barcelona {
     background-color: #800000;
 }
